issue #221 Phase 0 step 3b: KVM 64-bit long mode (movabs+mov+hlt を実 vCPU で実行)
#221 Phase 0 step 3a (16-bit real mode + NOP+HLT) の次段。guest を 64-bit long
mode に入れて 64-bit 命令を実 vCPU で実行し、64-bit register 幅が正しく扱える
ことを実証する。long mode 起動 (制御レジスタ CR0/CR3/CR4 + EFER + identity page
table + GDT-less segment) という最も間違えやすい部分を de-risk する step。

新規/拡張:
- KvmBindings.java 拡張: kvm_segment sub-offset (DPL/DB/S/L/G/AVL/UNUSABLE)、
  x86-64 long-mode architectural 定数 (CR0_PE/MP/ET/NE/WP/AM/PG + CR0_LONG_MODE
  合成値 0x80050033、CR4_PAE、EFER_SCE/LME/LMA/NXE、PTE_P/RW/US/PS、
  SEG_TYPE_CODE/DATA)。
- KvmSmoke64.java (~270 行): off-heap 2MB guest RAM (Arena.allocate、Java heap
  byte[] でなく native segment ← step 3a review 申し送り)。identity 2MB page
  (PML4@0x1000 / PDPT@0x2000 / PD@0x3000、PD[0] に PTE_PS で 2MB page) で
  [0,2MB) を identity map。CR0=LONG_MODE / CR3=PML4 / CR4=PAE / EFER=LME|LMA、
  cs.l=1 の GDT-less 64-bit code segment を KVM_SET_SREGS で直設定。guest code:
  movabs rax,0x1122334455667788; mov rbx,rax; hlt。

実証 (WSL2、2026-06-07): exit_reason=5 (KVM_EXIT_HLT)、rax=rbx=0x1122334455667788
(movabs imm64 + 64-bit mov 実行)、rip=0xe。= long-mode 設定 (CR0/CR3/CR4/EFER +
PAE page table + 64-bit segment) が全て正しいことの実証。16-bit real mode では
movabs imm64 は動かないので確かに 64-bit 実行の証明。
起動: java --enable-native-access=ALL-UNNAMED -cp target/classes emulin.KvmSmoke64

code review (16-agent adversarial workflow、12 raw → 6 confirmed): 6 件すべて
step 3c (ring 3 / syscall trap) の forward-compat TODO で、ring-0 long-mode smoke
自体のバグは無し (smoke 完走=ring-0 path 正しい)。レビューが step 3c 設計仕様を
精緻化:
- PTE_US は全 paging level (PML4E∧PDPTE∧PDE∧PTE) に必要 (leaf だけでは ring-3 #PF)
- 単一 2MB page では user code と supervisor page table を分離できない→4KB PTE
- EFER.SCE + KVM_SET_MSRS (新 binding _IOW(KVMIO,0x89)=0x4008AE89) + STAR/LSTAR/FMASK
- cs/ss dpl=3 + RPL=3 selector (STAR の USER/KERNEL base selector と一致)
- user stack (RSP) + kernel stack + swapgs/KERNEL_GS_BASE (syscall は RSP 自動切替なし)
これらを docs §4.5 (step 3c チェックリスト) + KvmSmoke64 コメントに反映。

検証:
- KVM64 smoke OK (l